[project]
name = "ragexp"
version = "0.1.0"
description = "Experiments with RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39.0",
    "cohere>=5.11.4",
    "elasticsearch>=8.16.0",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "python-decouple>=3.8",
    "voyageai>=0.3.1",
]

[tool.isort]
profile = "black"
